--- a/conf/experiment/vrt_def.yaml
+++ b/conf/experiment/vrt_def.yaml
@@ -30,6 +30,6 @@ nn:
 train:
   trainer:
     devices: 2
-    max_steps: 100000
+    max_steps: 1000000
     gradient_clip_val: 0.5
     gradient_clip_algorithm: "value"
