--- a/conf/experiment/basic_of.yaml
+++ b/conf/experiment/basic_of.yaml
@@ -11,6 +11,9 @@ finetune: null
 
 nn:
   data:
+    batch_size: 8
+    prefetch_factor: 4
+    num_workers: 8
     datasets:
       train:
         path: "/home/aghinassi/Desktop/MergedVSR"
