--- a/conf/experiment/basic_of.yaml
+++ b/conf/experiment/basic_of.yaml
@@ -25,9 +25,9 @@ nn:
     set_lr: False
 
 train:
-  ddp: True
+  #ddp: True
   trainer:
-    devices: 1
+    devices: 2
     max_steps: 100000
     gradient_clip_val: 1
-    num_grad_acc: 1
+    #num_grad_acc: 1
