--- a/conf/train/logger/default.yaml
+++ b/conf/train/logger/default.yaml
@@ -1,6 +1,6 @@
 _target_: pytorch_lightning.loggers.WandbLogger #core.loggers.WandbLogger
 project: ${core.project_name}
 save_dir: ${oc.env:LOGGING_DIR}
-run_id: ${core.run_id}
+id: ${core.run_id}
 name: ${core.run_name}
 tags: ${core.tags}
