--- a/conf/experiment/basic_of_ddp.yaml
+++ b/conf/experiment/basic_of_ddp.yaml
@@ -29,6 +29,6 @@ train:
   use_of_loss: True
   trainer:
     devices: 2
-    max_steps: 100000
+    max_steps: 1000000
     gradient_clip_val: 1
     num_grad_acc: 4
