--- a/conf/default.yaml
+++ b/conf/default.yaml
@@ -1,6 +1,7 @@
 core:
   project_name: 'video-super-resolution'
-  run_id: 'default-run'
+  run_id: "check"
+  run_name: "Sanity Checking"
   storage_dir: ${oc.env:LOGGING_DIR}
   version: 0.0.1
   tags: null
