--- a/conf/experiment/vrt_def_ddp.yaml
+++ b/conf/experiment/vrt_def_ddp.yaml
@@ -1,28 +1,26 @@
 # @package _global_
-core:
-  run_id: "akfvaeasilf"
-  run_name: "Real Basic OF"
-
 defaults:
-  - override /train/strategy: ddp
+  - override /nn/module/model: baby_vrt
   - override /nn/data: easy_schedule
 
 finetune: null
 
 nn:
+  module:
+    _target_: vsr.models.VRT.pl_module.LitBase
+    optimizer:
+      lr: 1e-4
+      betas: [ 0.9, 0.99 ]
+    scheduler:
+      eta_min: 1e-7
   data:
     batch_size: 8
-    prefetch_factor: 8
-    num_workers: 16
+    prefetch_factor: 4
+    num_workers: 8
     datasets:
       train:
         path: "/home/aghinassi/Desktop/MergedVSR"
-  module:
-    optimizer:
-      lr: 1e-4
-    scheduler:
-      eta_min: 6.7e-5
-    set_lr: False
+        seq: 6
 
 train:
   ddp: True
@@ -30,4 +28,4 @@ train:
     devices: 2
     max_epochs: 1000000
     gradient_clip_val: 1
-    num_grad_acc: 4
+    num_grad_acc: 2
