--- a/conf/experiment/vrt_def_ddp.yaml
+++ b/conf/experiment/vrt_def_ddp.yaml
@@ -1,7 +1,6 @@
 # @package _global_
 defaults:
   - override /nn/module/model: baby_vrt
-  - override /nn/data: easy_schedule
 
 finetune: null
 
@@ -13,6 +12,8 @@ nn:
       betas: [ 0.9, 0.99 ]
     scheduler:
       eta_min: 1e-7
+    model:
+      _target_: vsr.models.VRT.vrt_te.TinyVRT
   data:
     batch_size: 8
     prefetch_factor: 4
