--- a/conf/experiment/vrt_def_ddp.yaml
+++ b/conf/experiment/vrt_def_ddp.yaml
@@ -13,7 +13,7 @@ nn:
     scheduler:
       eta_min: 1e-7
     model:
-      _target_: vsr.models.VRT.vrt_te.TinyVRT
+      _target_: vsr.models.VRT.vrt.TinyVRT
   data:
     batch_size: 8
     prefetch_factor: 4
