--- a/conf/experiment/test.yaml
+++ b/conf/experiment/test.yaml
@@ -1,4 +1,10 @@
 # @package _global_
+cfg_dir: /home/aghinassi/VSR/checkpoints/basic_gan
+lr_dir: /mnt/hdd/dataset/pexels/compressed
+hr_dir: /mnt/hdd/dataset/pexels/groundtruth
+out_dir: /mnt/hdd/dataset/pexels
+window_size: 15
+
 metric:
   _target_: core.metrics.MetricCollection
   metrics:
