--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -1,10 +1,9 @@
 # @package _global_
 core:
-  run_id: 'realbasicvsr_adversarial'
-  run_name: "Real Basic Default - GAN"
+  run_id: 'lbasdgflablg'
+  run_name: "Real Basic Default - GAN (2e-5)"
 
-finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_curriculum_hard/checkpoints/last.ckpt'
-# finetune: null
+finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_standard/checkpoints/last.ckpt'
 
 defaults:
   - override /nn/data: default
