--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -7,6 +7,7 @@ finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbas
 
 defaults:
   - override /nn/data: default
+  - override /train/logger: lightning
   #- override /train/strategy: ddp
   - override /nn/module: gan
 
