--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 core:
-  run_id: 'lbasdgflablg'
-  run_name: "Real Basic Default - GAN (2e-5)"
+  run_id: 'vmncbmnbid'
+  run_name: "Real Basic Hard - GAN (2e-5)"
 
 finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_curriculum_hard/checkpoints/last.ckpt'
 
