--- a/conf/nn/module/scheduler/gan_cosine.yaml
+++ b/conf/nn/module/scheduler/gan_cosine.yaml
@@ -1,11 +1,11 @@
 generator:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: ${train.trainer.max_steps}
+  T_max: 200000
   eta_min: 1e-6
   verbose: False
 
 discriminator:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: ${train.trainer.max_steps}
+  T_max: 200000
   eta_min: 1e-6
   verbose: False
