--- a/conf/nn/module/optimizer/gan_adam.yaml
+++ b/conf/nn/module/optimizer/gan_adam.yaml
@@ -1,12 +1,12 @@
 generator:
-  _target_: torch.optim.Adam
+  _target_: bitsandbytes.optim.Adam8bit #torch.optim.Adam
   lr: 5e-5
   betas: [ 0.9, 0.99 ]
   eps: 1e-08
   weight_decay: 0
 
 discriminator:
-  _target_: torch.optim.Adam
+  _target_: bitsandbytes.optim.Adam8bit #torch.optim.Adam
   lr: 2e-5
   betas: [ 0.9, 0.99 ]
   eps: 1e-08
