--- a/conf/experiment/basic_gan_torch.yaml
+++ b/conf/experiment/basic_gan_torch.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 core:
-  run_id: 'vqfrbmnbid'
-  run_name: "Real Basic Hard - GAN (Adv 2e-5, Per 1e-1)"
+  run_id: 'qwdqeffgwe'
+  run_name: "Real Basic Default - GAN (Adv 2e-5, Per 1e-1)"
 
 finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_standard/checkpoints/last.ckpt'
 
