--- a/conf/nn/module/gan.yaml
+++ b/conf/nn/module/gan.yaml
@@ -20,11 +20,11 @@ discriminator:
 
 perceptual_loss:
   _target_: core.losses.PerceptualLoss
-  weight: 1e-1
+  weight: 1.0
 
 adversarial_loss:
   _target_: core.losses.AdversarialLoss
-  weight: 1e-5
+  weight: 2e-5
 
 defaults:
   - model: baby_realbasic
