--- a/conf/experiment/test.yaml
+++ b/conf/experiment/test.yaml
@@ -3,6 +3,7 @@ cfg_dir: /home/aghinassi/VSR/checkpoints/basic_gan
 lr_dir: /mnt/hdd/dataset/pexels/compressed
 hr_dir: /mnt/hdd/dataset/pexels/groundtruth
 out_dir: /mnt/hdd/dataset/pexels
+
 window_size: 128
 num_workers: 8
 
@@ -13,3 +14,5 @@ metric:
       _target_: piqa.PSNR
     SSIM:
       _target_: piqa.SSIM
+    OFLoss:
+      _target_: core.losses.OpticalFlowConsistency
