--- a/conf/nn/module/scheduler/gan_cosine.yaml
+++ b/conf/nn/module/scheduler/gan_cosine.yaml
@@ -6,6 +6,6 @@ generator:
 
 discriminator:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: 200000
-  eta_min: 1e-6
+  T_max: 1000000
+  eta_min: 2e-4
   verbose: False
