--- a/conf/train/model/baby_vrt.yaml
+++ b/conf/train/model/baby_vrt.yaml
@@ -1,5 +1,5 @@
 _target_: vsr.models.VRT.vrt.TinyVRT
-upscale: 4
+upscale: ${train.data.datasets.train.scale}
 in_chans: 3
 out_chans: 3
 refine_steps: 3
