--- a/conf/experiment/basic_cl_easy.yaml
+++ b/conf/experiment/basic_cl_easy.yaml
@@ -1,28 +1,10 @@
 # @package _global_
-core:
-  run_id: 'realbasicvsr_curriculum_easy'
-  run_name: "Real Basic Curriculum - Easy Schedule"
-
 defaults:
-  - override /train/strategy: ddp
-  - override /nn/data: easy_schedule
-
-finetune: null
-
-nn:
-  data:
-    datasets:
-      train:
-        path: "/home/aghinassi/Desktop/MergedVSR"
-  module:
-    optimizer:
-      lr: 1e-4
-    scheduler:
-      eta_min: 6.7e-5
-    set_lr: False
+  - override /train/data: easy_schedule
 
 train:
-  trainer:
-    devices: 2
-    max_steps: 20000
-    gradient_clip_val: 1
+  optimizer:
+    lr: 1e-4
+
+  scheduler:
+    eta_min: 6.7e-5
