--- a/conf/experiment/basic_cl_hard.yaml
+++ b/conf/experiment/basic_cl_hard.yaml
@@ -1,24 +1,12 @@
 # @package _global_
-core:
-  run_id: 'realbasicvsr_curriculum_hard'
-  run_name: "Real Basic Curriculum - Hard Schedule"
-
 defaults:
-  - override /train/strategy: ddp
-  - override /nn/data: hard_schedule
-
-finetune: /home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_curriculum_mid/checkpoints/last.ckpt
-
-nn:
-  module:
-    optimizer:
-      lr: 3.4e-5
-    scheduler:
-      eta_min: 1e-6
-    set_lr: False
+  - override /train/data: hard_schedule
 
 train:
-  trainer:
-    devices: 2
-    max_steps: 40000
-    gradient_clip_val: 1
+  optimizer:
+    lr: 3.4e-5
+
+  scheduler:
+    eta_min: 1e-6
+
+  restore: /home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_curriculum_mid/checkpoints/last.ckpt
