--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -1,45 +1,13 @@
 # @package _global_
-core:
-  run_id: 'vmncbmnbid'
-  run_name: "Real Basic Hard - GAN (2e-5)"
-
-finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_curriculum_hard/checkpoints/last.ckpt'
-
 defaults:
   - override /nn/data: default
-  - override /train/logger: lightning
-  #- override /train/strategy: ddp
   - override /nn/module: gan
-
-nn:
-  data:
-    batch_size: 2
-    prefetch_factor: 4
-    num_workers: 8
-    datasets:
-      train:
-        path: "/home/aghinassi/Desktop/MergedVSR"
-        hr_augmentation:
-          - _target_: kornia.augmentation.RandomCrop
-            size: [ 256, 256 ]
-            pad_if_needed: True
-            same_on_batch: True
-            keepdim: True
-
-          - _target_: kornia.augmentation.RandomHorizontalFlip
-            p: 0.5
-            same_on_batch: True
-            keepdim: True
-
-          - _target_: kornia.augmentation.RandomVerticalFlip
-            p: 0.5
-            same_on_batch: True
-            keepdim: True
+  - override /nn/module/optimizer: gan_adam8bit
 
 train:
-  trainer:
-    devices: 1
-    max_steps: 2000000
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbasicvsr_standard/checkpoints/last.ckpt'
+  from_lightning: True
+
 
 
 
