--- a/conf/experiment/basic_of_ddp.yaml
+++ b/conf/experiment/basic_of_ddp.yaml
@@ -1,33 +1,19 @@
 # @package _global_
-core:
-  run_id: "akfvaeasilf"
-  run_name: "Real Basic OF"
-
 defaults:
-  - override /train/strategy: ddp
-  - override /nn/data: easy_schedule
-
-finetune: null
-
-nn:
-  data:
-    batch_size: 8
-    prefetch_factor: 8
-    num_workers: 16
-    datasets:
-      train:
-        path: "/home/aghinassi/Desktop/MergedVSR"
-  module:
-    optimizer:
-      lr: 1e-4
-    scheduler:
-      eta_min: 6.7e-5
-    set_lr: False
+  - override /train/data: easy_schedule
 
 train:
-  ddp: True
-  trainer:
-    devices: 2
-    max_epochs: 1000000
-    gradient_clip_val: 1
-    num_grad_acc: 4
+  data:
+    prefetch_factor: 8
+    num_workers: 16
+
+  optimizer:
+    lr: 1e-4
+
+  scheduler:
+    eta_min: 6.7e-5
+
+  max_epochs: 1000000
+  num_grad_acc: 4
+
+
