--- a/conf/experiment/vrt_def.yaml
+++ b/conf/experiment/vrt_def.yaml
@@ -1,37 +1,20 @@
 # @package _global_
-core:
-  run_id: "vrt_default"
-  run_name: "VRT Default"
-
 defaults:
-  - override /train/strategy: ddp
-  - override /nn/module/model: baby_vrt
-  - override /train/callbacks: default
+  - override /train/model: baby_vrt
 
-finetune: null
-
-nn:
-  module:
-    _target_: vsr.models.VRT.pl_module.LitBase
-    optimizer:
-      lr: 1e-4
-      betas: [ 0.9, 0.99 ]
-    scheduler:
-      eta_min: 1e-7
-  data:
-    batch_size: 2
-    prefetch_factor: 4
-    num_workers: 8
-    datasets:
-      train:
-        path: "/home/aghinassi/Desktop/MergedVSR"
-        seq: 6
+core:
+  run_name: "Real Basic Default"
 
 train:
-  ddp: True
-  trainer:
-    devices: 2
-    max_steps: 1000000
-    gradient_clip_val: 0.5
-    gradient_clip_algorithm: "value"
-    num_grad_acc: 1
+  optimizer:
+    lr: 1e-4
+    betas: [ 0.9, 0.99 ]
+
+  scheduler:
+    eta_min: 1e-7
+
+  data:
+    batch_size: 2
+    datasets:
+      train:
+        seq: 6
