--- a/conf/experiment/vrt_def_ddp.yaml
+++ b/conf/experiment/vrt_def_ddp.yaml
@@ -1,30 +1,18 @@
 # @package _global_
 defaults:
-  - override /nn/module/model: baby_vrt
-
-finetune: null
-
-nn:
-  module:
-    _target_: vsr.models.VRT.pl_module.LitBase
-    optimizer:
-      lr: 1e-4
-      betas: [ 0.9, 0.99 ]
-    scheduler:
-      eta_min: 1e-6
-  data:
-    batch_size: 8
-    prefetch_factor: 4
-    num_workers: 8
-    datasets:
-      train:
-        path: "/home/aghinassi/Desktop/MergedVSR"
-        seq: 6
+  - override /train/model: baby_vrt
 
 train:
-  ddp: True
-  trainer:
-    devices: 2
-    max_epochs: 1000000
-    gradient_clip_val: 1
-    num_grad_acc: 4
+  optimizer:
+    lr: 1e-4
+    betas: [ 0.9, 0.99 ]
+
+  scheduler:
+    eta_min: 1e-6
+
+  data:
+    datasets:
+      train:
+        seq: 6
+
+  num_grad_acc: 4
