--- a/conf/train/data/hard_schedule.yaml
+++ b/conf/train/data/hard_schedule.yaml
@@ -1,12 +1,10 @@
-_target_: vsr.data.datamodule.DataModuleVSR
-
 num_workers: 8
 batch_size: 8
 prefetch_factor: 4
 
 datasets:
   train:
-    _target_: vsr.data.dataset.DatasetVSR
+    _target_: vsr.dataset.DatasetVSR
     path: "/home/aghinassi/Desktop/MergedVSR"
     split: "train"
     seq: 12
@@ -65,11 +63,11 @@ datasets:
         size: [ 64, 64 ]
 
   val:
-    _target_: ${nn.data.datasets.train._target_}
-    path: ${nn.data.datasets.train.path}
+    _target_: ${train.data.datasets.train._target_}
+    path: ${train.data.datasets.train.path}
     split: "val"
-    seq: ${nn.data.datasets.train.seq}
-    scale: ${nn.data.datasets.train.scale}
+    seq: ${train.data.datasets.train.seq}
+    scale: ${train.data.datasets.train.scale}
     size: 0.1
     hr_augmentation:
       - _target_: torchvision.transforms.CenterCrop
