--- a/conf/train/data/mid_schedule.yaml
+++ b/conf/train/data/mid_schedule.yaml
@@ -1,12 +1,10 @@
-_target_: vsr.data.datamodule.DataModuleVSR
-
 num_workers: 8
 batch_size: 8
 prefetch_factor: 4
 
 datasets:
   train:
-    _target_: vsr.data.dataset.DatasetVSR
+    _target_: vsr.dataset.DatasetVSR
     path: "/home/aghinassi/Desktop/MergedVSR"
     split: "train"
     seq: 12
@@ -36,22 +34,30 @@ datasets:
         p: 1.0
 
     lr_augmentation:
+      - _target_: core.augmentations.RandomJPEGCompression
+        quality: [ 50, 90 ]
+
+      - _target_: kornia.augmentation.RandomGaussianNoise
+        mean: 0
+        std: 0.02
+        same_on_batch: False
+        keepdim: True
+        p: 0.7
+
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 34, 45 ]
+        crf: [ 36, 45 ]
         fps: [ 30 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
 
-
-
   val:
-    _target_: ${nn.data.datasets.train._target_}
-    path: ${nn.data.datasets.train.path}
+    _target_: ${train.data.datasets.train._target_}
+    path: ${train.data.datasets.train.path}
     split: "val"
-    seq: ${nn.data.datasets.train.seq}
-    scale: ${nn.data.datasets.train.scale}
+    seq: ${train.data.datasets.train.seq}
+    scale: ${train.data.datasets.train.scale}
     size: 0.1
     hr_augmentation:
       - _target_: torchvision.transforms.CenterCrop
