--- a/conf/train/data/distillation.yaml
+++ b/conf/train/data/distillation.yaml
@@ -11,6 +11,12 @@ datasets:
     scale: 1
     size: 0.9
     hr_augmentation:
+      - _target_: kornia.augmentation.RandomCrop
+        size: [ 512, 512 ]
+        pad_if_needed: True
+        same_on_batch: True
+        keepdim: True
+
       - _target_: kornia.augmentation.Resize
         size: [ 120, 160 ]
 
@@ -65,6 +71,9 @@ datasets:
     scale: ${train.data.datasets.train.scale}
     size: 0.1
     hr_augmentation:
+      - _target_: torchvision.transforms.CenterCrop
+        size: 512
+
       - _target_: kornia.augmentation.Resize
         size: [ 120, 160 ]
 
