--- a/conf/experiment/vrt_def.yaml
+++ b/conf/experiment/vrt_def.yaml
@@ -1,9 +1,6 @@
 # @package _global_
 defaults:
-  - override /train/model: baby_vrt
-
-core:
-  run_name: "Real Basic Default"
+  - override /train/model: baby_vrt_moe
 
 train:
   optimizer:
@@ -11,10 +8,11 @@ train:
     betas: [ 0.9, 0.99 ]
 
   scheduler:
-    eta_min: 1e-7
+    eta_min: 1e-6
 
   data:
-    batch_size: 2
     datasets:
       train:
         seq: 6
+
+  num_grad_acc: 4
