--- a/conf/train/model/baby_vrt_moe.yaml
+++ b/conf/train/model/baby_vrt_moe.yaml
@@ -11,6 +11,9 @@ depths: [ 4, 4, 4, 4, 4, 4, 4 ]
 indep_reconsts: [ -2, -1 ]
 embed_dims: [ 32, 32, 32, 32, 32, 32, 32 ]
 num_heads: [ 4, 4, 4, 4, 4, 4, 4 ]
+num_experts: 4
+num_gpus: 2
+top_k: 2
 mul_attn_ratio: 0.75
 mlp_ratio: 2.
 qkv_bias: True
