--- a/src/vsr/models/MoEVRT/ds_config.json
+++ b/src/vsr/models/MoEVRT/ds_config.json
@@ -1,46 +1,30 @@
 {
-  "train_batch_size": 16,
-  "steps_per_print": 2000,
+  "train_batch_size": 2,
+  "gradient_clipping": 1.0,
+  "gradient_accumulation_steps": 4,
+  "steps_per_print": 200000,
   "optimizer": {
     "type": "Adam",
     "params": {
-      "lr": 0.001,
+      "lr": 1e-4,
       "betas": [
-        0.8,
-        0.999
+        0.9,
+        0.99
       ],
       "eps": 1e-8,
-      "weight_decay": 3e-7
+      "weight_decay": 0
     }
   },
   "scheduler": {
-    "type": "WarmupLR",
+    "type": "WarmupDecayLR",
     "params": {
+      "total_num_steps": 500000,
       "warmup_min_lr": 0,
-      "warmup_max_lr": 0.001,
+      "warmup_max_lr": 1e-4,
       "warmup_num_steps": 1000
     }
   },
-  "gradient_clipping": 1.0,
-  "prescale_gradients": false,
-  "fp16": {
-    "enabled": true,
-    "fp16_master_weights_and_grads": false,
-    "loss_scale": 0,
-    "loss_scale_window": 500,
-    "hysteresis": 2,
-    "min_loss_scale": 1,
-    "initial_scale_power": 15
-  },
-  "wall_clock_breakdown": false,
-  "zero_optimization": {
-    "stage": 0,
-    "allgather_partitions": true,
-    "reduce_scatter": true,
-    "allgather_bucket_size": 50000000,
-    "reduce_bucket_size": 50000000,
-    "overlap_comm": true,
-    "contiguous_gradients": true,
-    "cpu_offload": false
+  "bf16": {
+    "enabled": true
   }
 }
