--- a/src/vsr/models/MoEVRT/ds_config.json
+++ b/src/vsr/models/MoEVRT/ds_config.json
@@ -1,5 +1,5 @@
 {
-  "train_batch_size": 2,
+  "train_micro_batch_size_per_gpu": 2,
   "gradient_clipping": 1.0,
   "gradient_accumulation_steps": 4,
   "steps_per_print": 200000,
