--- a/src/vsr/models/MoEVRT/ds_config.json
+++ b/src/vsr/models/MoEVRT/ds_config.json
@@ -31,8 +31,8 @@
     "stage": 0,
     "allgather_partitions": true,
     "reduce_scatter": true,
-    "allgather_bucket_size": 50000000,
-    "reduce_bucket_size": 50000000,
+    "allgather_bucket_size": 500000,
+    "reduce_bucket_size": 500000,
     "overlap_comm": true,
     "contiguous_gradients": true,
     "cpu_offload": false
