--- a/moe/ds_config.json
+++ b/moe/ds_config.json
@@ -1,5 +1,5 @@
 {
-  "train_batch_size": 8,
+  "train_micro_batch_size_per_gpu": 2,
   "gradient_clipping": 1.0,
   "gradient_accumulation_steps": 4,
   "steps_per_print": 200000,
@@ -26,5 +26,15 @@
   },
   "bf16": {
     "enabled": true
+  },
+  "zero_optimization": {
+    "stage": 2,
+    "allgather_partitions": true,
+    "reduce_scatter": true,
+    "allgather_bucket_size": 50000,
+    "reduce_bucket_size": 50000,
+    "overlap_comm": true,
+    "contiguous_gradients": true,
+    "cpu_offload": false
   }
 }
