--- a/src/vsr/models/MoEVRT/ds_config.json
+++ b/src/vsr/models/MoEVRT/ds_config.json
@@ -4,7 +4,7 @@
   "gradient_accumulation_steps": 4,
   "steps_per_print": 200000,
   "optimizer": {
-    "type": "Adam",
+    "type": "OneBitAdam",
     "params": {
       "lr": 1e-4,
       "betas": [
