--- a/src/vsr/models/MoEVRT/ds_config.json
+++ b/src/vsr/models/MoEVRT/ds_config.json
@@ -12,7 +12,8 @@
         0.99
       ],
       "eps": 1e-8,
-      "weight_decay": 0
+      "weight_decay": 0,
+      "comm_backend_name": "mpi"
     }
   },
   "scheduler": {
