--- a/src/vsr/models/MoEVRT/ds_config.json
+++ b/src/vsr/models/MoEVRT/ds_config.json
@@ -4,7 +4,7 @@
   "gradient_accumulation_steps": 4,
   "steps_per_print": 200000,
   "optimizer": {
-    "type": "OneBitAdam",
+    "type": "Adam",
     "params": {
       "lr": 1e-4,
       "betas": [
@@ -12,8 +12,7 @@
         0.99
       ],
       "eps": 1e-8,
-      "weight_decay": 0,
-      "comm_backend_name": "mpi"
+      "weight_decay": 0
     }
   },
   "scheduler": {
