--- a/conf/experiment/spynet.yaml
+++ b/conf/experiment/spynet.yaml
@@ -7,6 +7,11 @@ train:
   restore: null
   finetune: True
 
+  data:
+    batch_size: 16
+    num_workers: 20
+    prefetch_factor: 8
+
   cleaner:
     _target_: core.modules.conv.IterativeRefinement
     mid_ch: 64
