--- a/conf/experiment/vrt_moe.yaml
+++ b/conf/experiment/vrt_moe.yaml
@@ -3,7 +3,7 @@ defaults:
   - override /train: deepspeed
 
 core:
-  run_id: gvjkvljjl
+  run_id: wetioren
   run_name: MoEVRT DeepSpeed
 
 train:
@@ -13,6 +13,6 @@ train:
         seq: 6
 
   model:
-    num_experts: 2
+    num_experts: 4
     num_gpus: 1
     top_k: 2
