--- a/conf/experiment/vrt_moe.yaml
+++ b/conf/experiment/vrt_moe.yaml
@@ -2,9 +2,9 @@
 defaults:
   - override /train: deepspeed
 
-core:
-  run_id: wetioren
-  run_name: MoEVRT DeepSpeed
+#core:
+#  run_id: wetioren
+#  run_name: MoEVRT DeepSpeed
 
 train:
   data:
