--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -3,6 +3,7 @@ defaults:
   - override /train/model: baby_vrt_moe
 
 train:
+  ddp: False
 
   model:
     _target_: moe.MoEVRT.fastmoe.vrt_moe.TinyVRT
