--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -19,7 +19,9 @@ train:
     eta_min: 1e-6
 
   data:
-    batch_size: 16
+    batch_size: 8
     datasets:
       train:
         seq: 6
+
+  num_grad_acc: 2
