--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -10,6 +10,7 @@ train:
     num_experts: 4
     num_gpus: 1
     top_k: 2
+    window_size: [ 8, 8, 8 ]
 
   optimizer:
     lr: 1e-4
@@ -19,9 +20,9 @@ train:
     eta_min: 1e-6
 
   data:
-    batch_size: 8
+    batch_size: 4
     datasets:
       train:
-        seq: 6
+        seq: 8
 
-  num_grad_acc: 2
+  num_grad_acc: 4
