--- a/conf/experiment/basic_spynet.yaml
+++ b/conf/experiment/basic_spynet.yaml
@@ -1,3 +1,8 @@
 # @package _global_
 defaults:
   - override /train/model: baby_realbasic_spynet
+
+train:
+  num_grad_acc: 4
+  data:
+    batch_size: 2
