--- a/conf/experiment/vrt_spynet.yaml
+++ b/conf/experiment/vrt_spynet.yaml
@@ -3,7 +3,7 @@ defaults:
   - override /train/model: baby_vrt_spynet
 
 train:
-  ddp: False
+  ddp: True
   optimizer:
     lr: 1e-4
     betas: [ 0.9, 0.99 ]
