--- a/conf/experiment/vrt_moe_gan.yaml
+++ b/conf/experiment/vrt_moe_gan.yaml
@@ -22,8 +22,8 @@ train:
   max_epochs: 1000000
   num_grad_acc: 4
 
-  perceptual_loss:
-    _target_: core.losses.OpticalFlowConsistency
-    weight: 1e-2
+  # perceptual_loss:
+  #   _target_: core.losses.OpticalFlowConsistency
+  #   weight: 1e-2
 
   restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/awefwuye/checkpoint/last.ckpt'
