--- a/conf/train/scheduler/gan_cosine.yaml
+++ b/conf/train/scheduler/gan_cosine.yaml
@@ -1,5 +1,5 @@
 generator:
-  _target_: torch.optim.lr_scheduler.Linear
+  _target_: torch.optim.lr_scheduler.LinearLR
   start_factor: 1e-20
   total_iters: 750
 
