--- a/conf/experiment/basic_spynet_gan.yaml
+++ b/conf/experiment/basic_spynet_gan.yaml
@@ -8,6 +8,10 @@ train:
   num_grad_acc: 4
   restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/opohfdd/checkpoint/last.ckpt'
 
+  perceptual_loss:
+    _target_: core.losses.OpticalFlowConsistency
+    weight: 1e-2
+
 
 
 
