--- a/conf/experiment/vrt_moe_gan.yaml
+++ b/conf/experiment/vrt_moe_gan.yaml
@@ -7,7 +7,7 @@ train:
   model:
     _target_: moe.MoEVRT.fastmoe.vrt_moe.TinyVRT
     num_experts: 4
-    num_gpus: 2
+    num_gpus: 1
     top_k: 2
     window_size: [ 8, 8, 8 ]
     refine_blocks: 3
@@ -19,7 +19,7 @@ train:
       train:
         seq: 8
 
-  ddp: True
+  ddp: False
   max_epochs: 1000000
   num_grad_acc: 4
 
