--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -7,13 +7,13 @@ train:
 
   model:
     _target_: moe.MoEVRT.fastmoe.vrt_moe.TinyVRT
-    num_experts: 4
-    num_gpus: 1
+    num_experts: 2
+    num_gpus: 2
     top_k: 2
     window_size: [ 8, 8, 8 ]
 
   optimizer:
-    lr: 1e-4
+    lr: 1e-6
     betas: [ 0.9, 0.99 ]
 
   scheduler:
@@ -26,3 +26,4 @@ train:
         seq: 8
 
   num_grad_acc: 4
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/awefwuye/checkpoint/last.ckpt'
