--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -1,6 +1,7 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
+  - override /train/data: easy_schedule
 
 train:
   model:
