--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -28,3 +28,5 @@ train:
 
   ddp: True
   num_grad_acc: 4
+
+  restore: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/checkpoint/segwlkhtvgb/last.ckpt"
