--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
-  - override /train/data: easy_schedule
+  # - override /train/data: easy_schedule
 
 train:
   model:
@@ -14,19 +14,20 @@ train:
     refine_steps: 5
 
   optimizer:
-    lr: 1e-4
+    lr: 1e-5
     betas: [ 0.9, 0.99 ]
 
   scheduler:
     eta_min: 1e-6
 
   data:
-    batch_size: 4
+    batch_size: 8
     datasets:
       train:
         seq: 8
 
-  ddp: True
+  ddp: False # True
   num_grad_acc: 4
 
-  restore: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/checkpoint/segwlkhtvgb/last.ckpt"
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/awefwuye/checkpoint/last.ckpt'
+  # restore: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/checkpoint/segwlkhtvgb/last.ckpt"
