--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -1,7 +1,6 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
-  # - override /train/data: easy_schedule
 
 train:
   model:
@@ -14,14 +13,15 @@ train:
     refine_steps: 5
 
   optimizer:
-    lr: 1e-4
+    lr: 1e-3
     betas: [ 0.9, 0.99 ]
 
   scheduler:
     eta_min: 1e-6
+    T_max: 300000
 
   data:
-    batch_size: 8
+    batch_size: 4
     datasets:
       train:
         seq: 8
