--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -13,11 +13,11 @@ train:
     refine_steps: 5
 
   optimizer:
-    lr: 1e-6
+    lr: 1e-4
     betas: [ 0.9, 0.99 ]
 
   scheduler:
-    eta_min: 1e-7
+    eta_min: 1e-6
     T_max: 300000
 
   data:
@@ -29,4 +29,4 @@ train:
   ddp: True
   num_grad_acc: 4
 
-  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/awefwuye/checkpoint/last.ckpt'
+  # restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/awefwuye/checkpoint/last.ckpt'
