--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -18,3 +18,5 @@ train:
 
   ddp: False
   num_grad_acc: 4
+
+  restore: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/dadfngaweye/checkpoint/last.ckpt'
