--- a/conf/experiment/vrt_moe_fm.yaml
+++ b/conf/experiment/vrt_moe_fm.yaml
@@ -8,6 +8,12 @@ train:
     num_gpus: 1
     top_k: 2
     window_size: [ 8, 8, 8 ]
+    refine_blocks: 5
+    refine_steps: 3
+
+  optimizer:
+    lr: 1e-3
+    betas: [ 0.8, 0.99 ]
 
   data:
     batch_size: 8
