--- a/conf/experiment/vrt_moe_cl.yaml
+++ b/conf/experiment/vrt_moe_cl.yaml
@@ -1,19 +1,22 @@
 # @package _global_
 defaults:
   - override /train/model: baby_vrt_moe
+  - override /train/data: easy_schedule
 
 train:
   model:
-    num_experts: 8
+    num_experts: 4
     num_gpus: 1
     top_k: 2
     window_size: [ 8, 8, 8 ]
 
   data:
-    batch_size: 8
+    batch_size: 4
     datasets:
       train:
         seq: 8
 
   ddp: False
   num_grad_acc: 4
+
+  restore: null
