--- a/conf/train/data/mid_schedule.yaml
+++ b/conf/train/data/mid_schedule.yaml
@@ -28,6 +28,9 @@ datasets:
         keepdim: True
 
     lr_augmentation:
+      - _target_: core.augmentations.RandomJPEGCompression
+        quality: [ 60, 95 ]
+
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
         crf: [ 36, 40 ]
