--- a/conf/train/data/hard_schedule.yaml
+++ b/conf/train/data/hard_schedule.yaml
@@ -35,6 +35,23 @@ datasets:
 
     lr_augmentation:
       - _target_: core.augmentations.RandomJPEGCompression
+        quality: [ 50, 95 ]
+
+      - _target_: kornia.augmentation.RandomGaussianNoise
+        mean: 0
+        std: 0.03
+        same_on_batch: False
+        keepdim: True
+        p: 0.5
+
+      - _target_: kornia.augmentation.RandomGaussianBlur
+        kernel_size: 5
+        sigma: [ 0.5, 1.5 ]
+        same_on_batch: False
+        keepdim: True
+        p: 0.5
+
+      - _target_: core.augmentations.RandomJPEGCompression
         quality: [ 60, 95 ]
 
       - _target_: core.augmentations.RandomVideoCompression
